--- a/qui-som.css
+++ b/qui-som.css
@@ -247,7 +247,7 @@ footer{
       margin-right: -100%;
     }
   .titulo1{
-    margin-left: 30%;
+    margin-left: 10%;
   }
 
   .articulo1{
@@ -257,27 +257,27 @@ footer{
 
   .Oferim{
     font-size: 40px;
-    width: 100%;
-    margin-left: 40%;
+    padding-left: 60%; 
+    margin-right: -10px;
+    
   }
   .titulo2{
-    
-    margin-left: 24%;
+    margin-right: 40px;  
+  
   }
 
   .titulo3{
-    margin-left: 32%;
-    margin-top: 50px;
+    
   }
 
   .titulo4{
-    margin-left: 25%;
+    
   }
   .titulo5{
-    margin-left: 30%;
+    
   }
   .articulos{
-    margin-right: 15%;
+    
     font-size: 25px;
     
   }
