--- a/qui-som.css
+++ b/qui-som.css
@@ -85,7 +85,7 @@
   font-size: 30px;
   color: #1867a9;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-right: 23%;
+  padding-right: 23%;
   margin-left: 70px;
   color: #ffffff;
   padding-top: 10%;
@@ -153,82 +153,12 @@
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: 140px;
   }
-.Ubicació{
-  margin-left: 30px;
-  margin-top: 50px;
-  
-  
-}
 
-/*Membres de la empresa*/
+  #Ubicació{
+    
+  }
 
-.Membres{
-  font-size: 26px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-align: center;
-  margin-bottom: 30px;
-  margin-top: 5%;
-  color: #ffffff;
-}
 
-.Dídac{
-  color: #292929;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #3586c9 ;
-  border: solid 2px #292929;
-  display: inline-block;
-  margin-left: 300px;
-  margin-bottom: 40px;
-  text-align: center;
-  padding: 20px 11px 20% 10px;
-  color: #ffffff;
-}
-.Abel {
-  color: #292929;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #3586c9 ;
-  border: solid 2px #292929;
-  display: inline-block;
-  margin-right: 15%;
-  margin-left: 5%;
-  text-align: center;
-  padding: 20px 11px 20% 10px;
-  color: #ffffff;
-}
-.Ángel{
-  color: #292929;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #3586c9 ;
-  border: solid 2px #292929;
-  display: inline-flex;
-  margin-left: 306px;
-  margin-right: 5px;
-  text-align: center; 
-  padding: 20px 20px 25% 10px;
-  color: #ffffff;
-}
-.Arnau{
-  color: #292929;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #3586c9 ;
-  border: solid 2px #292929;
-  display: inline-block;
-  text-align: center;
-  margin: 0 15% 40px 5%;
-  padding: 20px 15px 25% 20px;
-  color: #ffffff;
-}
-.Jan{
-  color: #292929;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #3586c9 ;
-  border: solid 2px #292929;
-  margin-right: 38%;
-  text-align: center;
-  margin-left: 35%;
-  padding: 20px 15px 20% 10px; 
-  color: #ffffff; 
-}
 
 footer{
   padding: 20px 0 20px 30px ;
@@ -242,62 +172,82 @@ footer{
 }
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 425px) {
+  .Navegació{
     
-    .Menú{
-      margin-right: -100%;
+  }
+  .Menú{
+      
     }
   .titulo1{
-    margin-left: 50%;
+    font-size: 30px;
+    margin-left: 20%;
+    padding-right: 10%;
   }
 
   .articulo1{
     margin-left: 48%;
-    margin-right: -50%;
+    margin-left: 10%;
+    margin-bottom: 50px ;
     
   }
 
   .Oferim{
     font-size: 40px;
-    padding-left: 60%; 
-    margin-right: -10px;
+    padding-left: -60%; 
+    margin-right: -25%;
     
   }
   .titulo2{
-    margin-left: 70%;  
+    margin-left: 28px;  
   
   }
 
   .titulo3{
-    margin-left: -1px;
+    margin-left: 28px;
   }
 
   .titulo4{
-    margin-left: -1px;
+    margin-left: 28px;
   }
   .titulo5{
-    margin-left: -1px;
+    margin-left: 28px;
     
   }
   .articulos{
     
     font-size: 25px;
+    margin-left: 10%;
+  }
+
+  #imagen1{
+    width: 350px;
+    height: 280px;
+    margin-left: 28px;
     
   }
-  .imagen1{
-    width: 20px;
-    margin-left: -10%;
-    height: 30px;
-  }
+
   .Lloc{
-    margin-left: 50px;
     margin-bottom: 40px;
+    margin-left: 25px;
+    
   }
- 
+
+  .Localització{
+    margin-left: 65px;
+    margin-bottom: 30px;
+  }
+
+  #Ubicació{
+    width: 350px;
+    height: 220px;
+    margin-left: 28px;
+    
+  } 
 
   Footer{
     margin-top: 30px;
-    margin-right: -100%;
+    padding-left: 100;
     align-content: center;
     
   }
