--- a/Práctiques.css
+++ b/Práctiques.css
@@ -21,6 +21,7 @@
     
   }
   
+  
   .Navegació > a{
     color: #ffffff;
     font-size: 18px;
@@ -65,7 +66,7 @@
   margin-left: 70px;
   padding-top: 20px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  margin-top: 20px;
+  margin-top: 40px;
   color: #1867a9;
   font-size: 28px;
   margin-bottom: 20px;
@@ -129,3 +130,35 @@ footer{
   padding-bottom: 20px ;
 
 }
+
+
+  @media only screen and (max-width: 425px) {
+    
+    
+    .Menú{
+      padding-right: 50px;
+      padding-left: 50px;
+    }
+    .Logo{
+      padding-left: 20%;
+      
+    }
+    .Usuari{
+      padding-left: 5px;
+    }
+    
+    .Principal{
+      margin-right: 10px;
+      
+    }
+    .text{
+      margin-right: 20px;
+    }
+
+    Footer{
+      margin-top: 30px;
+      padding-left: 60px;
+      align-content: center;
+      
+    }
+  }
