--- a/qui-som.css
+++ b/qui-som.css
@@ -2,7 +2,11 @@
   margin: 0px;
   padding: 0px;
 }
-
+.Navegació{
+  margin-right: 10%;
+  padding-top: 40px;
+    
+}
 /*Menú color*/
 .Menú{
   padding-bottom: 70px;
@@ -12,22 +16,19 @@
   body{
     background-color: #1b1b1b;
   }  
-.Navegació{
-  margin-right: 10%;
-  padding-top: 40px;
-    
-}
-  
+
+
 .Navegació > a{
   color: #ffffff;
   font-size: 18px;
-  padding: 8px 5px 8px 10px;
+  padding: 40px 5px 8px 10px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   border-radius: 14px;
   margin-left: 10px;
   margin-right: 15px;
   text-decoration: none;
 }
+
 .Navegació > a:hover{
   color: #ffffff;
   font-size: 18px;
@@ -173,12 +174,18 @@ footer{
 
 
 @media only screen and (max-width: 425px) {
-  .Navegació{
+  
+  .Menú{
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+  .Logo{
+    padding-left: 20%;
     
   }
-  .Menú{
-      
-    }
+  .Usuari{
+    padding-left: 5px;
+  }
   .titulo1{
     font-size: 30px;
     margin-left: 20%;
@@ -247,7 +254,7 @@ footer{
 
   Footer{
     margin-top: 30px;
-    padding-left: 100;
+    padding-left: 60px;
     align-content: center;
     
   }
