--- a/Configura-tot-en-un.css
+++ b/Configura-tot-en-un.css
@@ -99,6 +99,7 @@
   
   #Caixa{
     margin-top: 30px;
+    
   }
   
   .Components{
@@ -132,4 +133,44 @@
     border: solid #f1f1f1 1px;
     padding-bottom: 20px ;
   
+  }
+
+  @media only screen and (max-width: 425px) {
+    .Menú{
+      padding-right: 50px;
+      padding-left: 50px;
+    }
+    .Logo{
+      padding-left: 20%;
+      
+    }
+    .Usuari{
+      padding-left: 5px;
+    }
+    .Configura-tot{
+      margin-left: 50px;
+    }
+    
+    #Components{
+      margin-left: 90px;
+    }
+    #Desplegables{
+      margin-left: 1px;
+      width: 80%;
+    }
+  
+    .Preconfigurats{
+      margin-left: 50px;
+    }
+    #Caixa {
+     width: 350px;
+     height: 210px;
+    margin-left: -20px;     
+   }
+    Footer{
+      margin-top: 30px;
+      padding-left: 60px;
+      align-content: center;
+      
+    }
   }
