--- a/Portàtil.css
+++ b/Portàtil.css
@@ -130,3 +130,39 @@
     padding-bottom: 20px ;
   
   }
+
+  @media only screen and (max-width: 425px) {
+  .Menú{
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+  .Logo{
+    padding-left: 20%;
+    
+  }
+  .Usuari{
+    padding-left: 5px;
+  }
+  .Configura-tot{
+    margin-left: 50px;
+  }
+  
+  #Components{
+    margin-left: 90px;
+  }
+  #Desplegables{
+    margin-left: 1px;
+    width: 80%;
+  }
+
+  .Preconfigurats{
+    margin-left: 50px;
+  }
+ 
+  Footer{
+    margin-top: 30px;
+    padding-left: 60px;
+    align-content: center;
+    
+  }
+}
