--- a/Sobretaula.css
+++ b/Sobretaula.css
@@ -85,8 +85,9 @@
 }
 
 #Desplegables{
-  margin-left: 120px;
+  margin-left: 40px;
   text-align: center;
+  width: 40%;
   } 
 .Comprar{
   margin-left: 20%;
@@ -144,4 +145,38 @@ footer{
   border: solid #f1f1f1 1px;
   padding-bottom: 20px ;
 
+}
+
+@media only screen and (max-width: 425px) {
+  .Menú{
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+  .Logo{
+    padding-left: 20%;
+    
+  }
+  .Usuari{
+    padding-left: 5px;
+  }
+  .Configura-tot{
+    margin-left: 50px;
+  }
+  
+  #Components{
+    margin-left: 90px;
+  }
+  #Desplegables{
+    margin-left: 1px;
+    width: 80%;
+  }
+  .Preconfigurats{
+    margin-left: 50px;
+  }
+  Footer{
+    margin-top: 30px;
+    padding-left: 60px;
+    align-content: center;
+    
+  }
 }
