--- a/tipus-sobretaula.css
+++ b/tipus-sobretaula.css
@@ -82,3 +82,42 @@
     padding-bottom: 20px ;
   
   }
+
+  @media only screen and (max-width: 425px) {
+  .Menú{
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+  .Logo{
+    padding-left: 20%;
+    
+  }
+  .Usuari{
+    padding-left: 5px;
+  }
+
+   .Sobretaula{
+    margin-left: 5px;
+    margin-top: 10px;
+    
+  }
+  .Sobretaula > a > img{
+    width: 350px;
+    height: 250px;
+  }
+
+  .tot-en-un{
+    margin-left: 50px;
+    
+  }
+  .tot-en-un > a > img{
+    width: 350px;
+    height: 250px;
+  }
+  Footer{
+    margin-top: 30px;
+    padding-left: 60px;
+    align-content: center;
+    
+  }
+}
